Fix sidebar height on small screens

--- a/src/css/constellation.css
+++ b/src/css/constellation.css
@@ -328,6 +328,8 @@
             margin: var(--size-3);
 
             &.fullscreen {
+                container-type: inline-size;
+
                 margin: 0;
                 min-height: 100dvh;
                 display: flex;
@@ -679,7 +681,7 @@
         /* The center */
         .center {
             box-sizing: content-box;
-            max-inline-size: 60ch;
+            max-inline-size: 75ch;
             margin-inline: auto;
             padding-inline: var(--padding);
         }
@@ -741,6 +743,12 @@
                 &>*:last-child {
                     margin-block-end: 0;
                 }
+            }
+        }
+
+        @container (max-width: 50ch) {
+            .sidebar-container {
+                align-content: flex-start;
             }
         }
 
